--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
 		"@radix-ui/react-radio-group": "^1.3.8",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-switch": "^1.2.6",
+		"@tanstack/react-query": "^5.90.2",
+		"@types/js-cookie": "^3.0.6",
 		"axios": "^1.12.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.544.0",
 		"next": "15.5.4",
 		"react": "19.1.0",
